# narda-langs

./: .gitignore  README.md  index.html  main.ipynb  main.py  nbook.ipynb  nbook.py  pyproject.toml  pyscript.toml  run_cli.py
old/: parser_entities_old.py  parser_procedure_old.py
params/: alphabet.json  alphabet.toml  alphabet.yaml  dialect.json  dialect.toml  dialect.yaml  features.tsv  features_typed.csv  features_untyped.csv  rules_general.json  rules_general.toml  rules_general.yaml  rules_general_old.json  rules_special.json  rules_special.toml  rules_special.yaml  types.tsv
scripts/: logging_config.json  parser_dataclasses.py  parser_entities.py  parser_procedure.py  parser_procedure_old.py  ui.py  util.py
src/: parser_entities.py  parser_procedure.py
src/params/: rules_general.json
testing/: test_main.py  testing.json
